--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netcoreapp3.0</TargetFrameworks>
-    <RootNamespace>theori</RootNamespace>
+    <RootNamespace>NeuroSonic</RootNamespace>
     <Configurations>Debug;Release;Deploy</Configurations>
     <Platforms>x64</Platforms>
   </PropertyGroup>
@@ -57,6 +57,154 @@
     <PackageReference Include="System.Numerics.Vectors">
       <Version>4.5.0</Version>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\audio\sample_clap.ogg" />
+    <None Remove="Resources\audio\sample_kick.ogg" />
+    <None Remove="Resources\audio\sample_snare.ogg" />
+    <None Remove="Resources\audio\sample_snare_lo.ogg" />
+    <None Remove="Resources\audio\slam.ogg" />
+    <None Remove="Resources\materials\chip.fs" />
+    <None Remove="Resources\materials\game_background.fs" />
+    <None Remove="Resources\materials\highway.fs" />
+    <None Remove="Resources\materials\hold.fs" />
+    <None Remove="Resources\materials\laser.fs" />
+    <None Remove="Resources\materials\laser_entry.fs" />
+    <None Remove="Resources\scripts\chart_select\main.lua" />
+    <None Remove="Resources\scripts\game\bg-stars.lua" />
+    <None Remove="Resources\scripts\game\loader.lua" />
+    <None Remove="Resources\scripts\game\main.lua" />
+    <None Remove="Resources\textures\bt_chip.png" />
+    <None Remove="Resources\textures\bt_chip_sample.png" />
+    <None Remove="Resources\textures\bt_hold.png" />
+    <None Remove="Resources\textures\bt_hold_entry.png" />
+    <None Remove="Resources\textures\bt_hold_exit.png" />
+    <None Remove="Resources\textures\combo\0.png" />
+    <None Remove="Resources\textures\combo\1.png" />
+    <None Remove="Resources\textures\combo\2.png" />
+    <None Remove="Resources\textures\combo\3.png" />
+    <None Remove="Resources\textures\combo\4.png" />
+    <None Remove="Resources\textures\combo\5.png" />
+    <None Remove="Resources\textures\combo\6.png" />
+    <None Remove="Resources\textures\combo\7.png" />
+    <None Remove="Resources\textures\combo\8.png" />
+    <None Remove="Resources\textures\combo\9.png" />
+    <None Remove="Resources\textures\critical_cap.png" />
+    <None Remove="Resources\textures\cursor.png" />
+    <None Remove="Resources\textures\debug_bt.png" />
+    <None Remove="Resources\textures\debug_bt_active.png" />
+    <None Remove="Resources\textures\debug_fx.png" />
+    <None Remove="Resources\textures\debug_fx_active.png" />
+    <None Remove="Resources\textures\debug_vol.png" />
+    <None Remove="Resources\textures\fx_chip.png" />
+    <None Remove="Resources\textures\fx_chip_sample.png" />
+    <None Remove="Resources\textures\fx_hold.png" />
+    <None Remove="Resources\textures\fx_hold_entry.png" />
+    <None Remove="Resources\textures\fx_hold_exit.png" />
+    <None Remove="Resources\textures\game\bt_chip.png" />
+    <None Remove="Resources\textures\game\bt_chip_sample.png" />
+    <None Remove="Resources\textures\game\bt_hold.png" />
+    <None Remove="Resources\textures\game\bt_hold_entry.png" />
+    <None Remove="Resources\textures\game\bt_hold_exit.png" />
+    <None Remove="Resources\textures\game\critical_cap.png" />
+    <None Remove="Resources\textures\game\cursor.png" />
+    <None Remove="Resources\textures\game\fx_chip.png" />
+    <None Remove="Resources\textures\game\fx_chip_sample.png" />
+    <None Remove="Resources\textures\game\fx_hold.png" />
+    <None Remove="Resources\textures\game\fx_hold_entry.png" />
+    <None Remove="Resources\textures\game\fx_hold_exit.png" />
+    <None Remove="Resources\textures\game\highway.png" />
+    <None Remove="Resources\textures\game\key_beam.png" />
+    <None Remove="Resources\textures\game\laser.png" />
+    <None Remove="Resources\textures\game\laser_entry.png" />
+    <None Remove="Resources\textures\game\laser_exit.png" />
+    <None Remove="Resources\textures\game\scorebar.png" />
+    <None Remove="Resources\textures\game_bg\background.png" />
+    <None Remove="Resources\textures\game_bg\centerpiece.png" />
+    <None Remove="Resources\textures\game_bg\particle0.png" />
+    <None Remove="Resources\textures\game_bg\particle1.png" />
+    <None Remove="Resources\textures\game_bg\particle2.png" />
+    <None Remove="Resources\textures\highway.png" />
+    <None Remove="Resources\textures\key_beam.png" />
+    <None Remove="Resources\textures\laser.png" />
+    <None Remove="Resources\textures\laser_entry.png" />
+    <None Remove="Resources\textures\laser_exit.png" />
+    <None Remove="Resources\textures\scorebar.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\audio\sample_clap.ogg" />
+    <EmbeddedResource Include="Resources\audio\sample_kick.ogg" />
+    <EmbeddedResource Include="Resources\audio\sample_snare.ogg" />
+    <EmbeddedResource Include="Resources\audio\sample_snare_lo.ogg" />
+    <EmbeddedResource Include="Resources\audio\slam.ogg" />
+    <EmbeddedResource Include="Resources\materials\chip.fs" />
+    <EmbeddedResource Include="Resources\materials\game_background.fs" />
+    <EmbeddedResource Include="Resources\materials\highway.fs" />
+    <EmbeddedResource Include="Resources\materials\hold.fs" />
+    <EmbeddedResource Include="Resources\materials\laser.fs" />
+    <EmbeddedResource Include="Resources\materials\laser_entry.fs" />
+    <EmbeddedResource Include="Resources\scripts\chart_select\main.lua" />
+    <EmbeddedResource Include="Resources\scripts\game\bg-stars.lua" />
+    <EmbeddedResource Include="Resources\scripts\game\loader.lua" />
+    <EmbeddedResource Include="Resources\scripts\game\main.lua" />
+    <EmbeddedResource Include="Resources\textures\bt_chip.png" />
+    <EmbeddedResource Include="Resources\textures\bt_chip_sample.png" />
+    <EmbeddedResource Include="Resources\textures\bt_hold.png" />
+    <EmbeddedResource Include="Resources\textures\bt_hold_entry.png" />
+    <EmbeddedResource Include="Resources\textures\bt_hold_exit.png" />
+    <EmbeddedResource Include="Resources\textures\combo\0.png" />
+    <EmbeddedResource Include="Resources\textures\combo\1.png" />
+    <EmbeddedResource Include="Resources\textures\combo\2.png" />
+    <EmbeddedResource Include="Resources\textures\combo\3.png" />
+    <EmbeddedResource Include="Resources\textures\combo\4.png" />
+    <EmbeddedResource Include="Resources\textures\combo\5.png" />
+    <EmbeddedResource Include="Resources\textures\combo\6.png" />
+    <EmbeddedResource Include="Resources\textures\combo\7.png" />
+    <EmbeddedResource Include="Resources\textures\combo\8.png" />
+    <EmbeddedResource Include="Resources\textures\combo\9.png" />
+    <EmbeddedResource Include="Resources\textures\critical_cap.png" />
+    <EmbeddedResource Include="Resources\textures\cursor.png" />
+    <EmbeddedResource Include="Resources\textures\debug_bt.png" />
+    <EmbeddedResource Include="Resources\textures\debug_bt_active.png" />
+    <EmbeddedResource Include="Resources\textures\debug_fx.png" />
+    <EmbeddedResource Include="Resources\textures\debug_fx_active.png" />
+    <EmbeddedResource Include="Resources\textures\debug_vol.png" />
+    <EmbeddedResource Include="Resources\textures\fx_chip.png" />
+    <EmbeddedResource Include="Resources\textures\fx_chip_sample.png" />
+    <EmbeddedResource Include="Resources\textures\fx_hold.png" />
+    <EmbeddedResource Include="Resources\textures\fx_hold_entry.png" />
+    <EmbeddedResource Include="Resources\textures\fx_hold_exit.png" />
+    <EmbeddedResource Include="Resources\textures\game\bt_chip.png" />
+    <EmbeddedResource Include="Resources\textures\game\bt_chip_sample.png" />
+    <EmbeddedResource Include="Resources\textures\game\bt_hold.png" />
+    <EmbeddedResource Include="Resources\textures\game\bt_hold_entry.png" />
+    <EmbeddedResource Include="Resources\textures\game\bt_hold_exit.png" />
+    <EmbeddedResource Include="Resources\textures\game\critical_cap.png" />
+    <EmbeddedResource Include="Resources\textures\game\cursor.png" />
+    <EmbeddedResource Include="Resources\textures\game\fx_chip.png" />
+    <EmbeddedResource Include="Resources\textures\game\fx_chip_sample.png" />
+    <EmbeddedResource Include="Resources\textures\game\fx_hold.png" />
+    <EmbeddedResource Include="Resources\textures\game\fx_hold_entry.png" />
+    <EmbeddedResource Include="Resources\textures\game\fx_hold_exit.png" />
+    <EmbeddedResource Include="Resources\textures\game\highway.png" />
+    <EmbeddedResource Include="Resources\textures\game\key_beam.png" />
+    <EmbeddedResource Include="Resources\textures\game\laser.png" />
+    <EmbeddedResource Include="Resources\textures\game\laser_entry.png" />
+    <EmbeddedResource Include="Resources\textures\game\laser_exit.png" />
+    <EmbeddedResource Include="Resources\textures\game\scorebar.png" />
+    <EmbeddedResource Include="Resources\textures\game_bg\background.png" />
+    <EmbeddedResource Include="Resources\textures\game_bg\centerpiece.png" />
+    <EmbeddedResource Include="Resources\textures\game_bg\particle0.png" />
+    <EmbeddedResource Include="Resources\textures\game_bg\particle1.png" />
+    <EmbeddedResource Include="Resources\textures\game_bg\particle2.png" />
+    <EmbeddedResource Include="Resources\textures\highway.png" />
+    <EmbeddedResource Include="Resources\textures\key_beam.png" />
+    <EmbeddedResource Include="Resources\textures\laser.png" />
+    <EmbeddedResource Include="Resources\textures\laser_entry.png" />
+    <EmbeddedResource Include="Resources\textures\laser_exit.png" />
+    <EmbeddedResource Include="Resources\textures\scorebar.png" />
   </ItemGroup>
 
   <ItemGroup>
