--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -116,7 +116,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="music-theori" Version="0.1.7.4" />
+    <ProjectReference Include="..\music-theori\music-theori\music-theori.csproj" />
   </ItemGroup>
 
   <ItemGroup>
