--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
+        
+      - name: Initialize Submodules
+        uses: textbook/git-checkout-submodule-action@2.0.0
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
