--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@master
         
       - name: Initialize Submodules
-        uses: textbook/git-checkout-submodule-action@2.0.0
+        #uses: textbook/git-checkout-submodule-action@2.0.0
+        run: git submodule init --update --recursive
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
