--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Publish Release
-        run: dotnet publish --configuration Release --framework netcoreapp3.0 --output artifacts\NeuroSonic
+        run: dotnet publish --configuration Release --framework netcoreapp3.0 --output artifacts
 
       - name: Package Release
-        run: Compress-Archive -Path artifacts\NeuroSonic\* -DestinationPath NeuroSonic
+        run: Compress-Archive -Path artifacts\* -DestinationPath NeuroSonic
         shell: pwsh
 
       - name: Publish NeuroSonic Artifacts
