--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,3 +40,5 @@ jobs:
           
       - name: Create Github Release
         uses: frankjuniorr/github-create-release-action@v2.1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
