--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         shell: pwsh
         
       - name: Dump CWD
-        run: dir
+        run: dir & dir Clients\nsc-core3.0\bin\x64\Deploy\netcoreapp3.0
           
       - name: Create Github Release
         uses: softprops/action-gh-release@v1
