Get basic chart selection working

--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\scripts\chartSelect.lua" />
     <None Remove="Resources\scripts\driver.lua" />
     <None Remove="Resources\scripts\game.lua" />
     <None Remove="Resources\scripts\game\backgrounds\stars.lua" />
@@ -70,6 +71,7 @@
     <None Remove="Resources\scripts\testPrinter.lua" />
     <None Remove="Resources\scripts\titleScreen.lua" />
     <None Remove="Resources\scripts\titleScreen\main.lua" />
+    <None Remove="Resources\textures\chartSelect\setFrame.png" />
     <None Remove="Resources\textures\genericBackground_LS.png" />
     <None Remove="Resources\textures\generic_bg_landscape.png" />
     <None Remove="Resources\textures\generic_bg_portrait.png" />
@@ -112,6 +114,7 @@
     <EmbeddedResource Include="Resources\materials\hold.fs" />
     <EmbeddedResource Include="Resources\materials\laser.fs" />
     <EmbeddedResource Include="Resources\materials\laser_entry.fs" />
+    <EmbeddedResource Include="Resources\scripts\chartSelect.lua" />
     <EmbeddedResource Include="Resources\scripts\chart_select\main.lua" />
     <EmbeddedResource Include="Resources\scripts\driver.lua" />
     <EmbeddedResource Include="Resources\scripts\game.lua" />
@@ -123,6 +126,7 @@
     <EmbeddedResource Include="Resources\scripts\layerLayout.lua" />
     <EmbeddedResource Include="Resources\scripts\splashScreen.lua" />
     <EmbeddedResource Include="Resources\scripts\titleScreen.lua" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\setFrame.png" />
     <EmbeddedResource Include="Resources\textures\combo\0.png" />
     <EmbeddedResource Include="Resources\textures\combo\1.png" />
     <EmbeddedResource Include="Resources\textures\combo\2.png" />
