entirely rework chart select menu

--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -82,6 +82,23 @@
     <None Remove="Resources\scripts\titleScreen.lua" />
     <None Remove="Resources\textures\bgHighContrast_LS.png" />
     <None Remove="Resources\textures\bgHighContrast_PR.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\background.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\border.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\cornerPanel.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\cornerPanelBorder.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\cornerPanelChevrons.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\fill.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\infoBorders.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\jacketBottomRight.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\jacketTopLeft.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\storageDevice.png" />
+    <None Remove="Resources\textures\chartSelect\chartFrame\trackDataLabel.png" />
+    <None Remove="Resources\textures\chartSelect\cursor.png" />
+    <None Remove="Resources\textures\chartSelect\cursorOuter.png" />
+    <None Remove="Resources\textures\chartSelect\levelBadge.png" />
+    <None Remove="Resources\textures\chartSelect\levelBadgeBorder.png" />
+    <None Remove="Resources\textures\chartSelect\noJacket.png" />
+    <None Remove="Resources\textures\chartSelect\noJacketOverlay.png" />
     <None Remove="Resources\textures\chartSelect\setFrame.png" />
     <None Remove="Resources\textures\chartSelect\setTitlePlate.png" />
     <None Remove="Resources\textures\genericBackground_LS.png" />
@@ -109,6 +126,26 @@
     <None Remove="Resources\textures\legend\start.png" />
     <None Remove="Resources\textures\legend\vol\l.png" />
     <None Remove="Resources\textures\legend\vol\r.png" />
+    <None Remove="Resources\textures\noise\0.png" />
+    <None Remove="Resources\textures\noise\1.png" />
+    <None Remove="Resources\textures\noise\2.png" />
+    <None Remove="Resources\textures\noise\3.png" />
+    <None Remove="Resources\textures\noise\4.png" />
+    <None Remove="Resources\textures\noise\5.png" />
+    <None Remove="Resources\textures\noise\6.png" />
+    <None Remove="Resources\textures\noise\7.png" />
+    <None Remove="Resources\textures\noise\8.png" />
+    <None Remove="Resources\textures\noise\9.png" />
+    <None Remove="Resources\textures\spritenums\slant\0.png" />
+    <None Remove="Resources\textures\spritenums\slant\1.png" />
+    <None Remove="Resources\textures\spritenums\slant\2.png" />
+    <None Remove="Resources\textures\spritenums\slant\3.png" />
+    <None Remove="Resources\textures\spritenums\slant\4.png" />
+    <None Remove="Resources\textures\spritenums\slant\5.png" />
+    <None Remove="Resources\textures\spritenums\slant\6.png" />
+    <None Remove="Resources\textures\spritenums\slant\7.png" />
+    <None Remove="Resources\textures\spritenums\slant\8.png" />
+    <None Remove="Resources\textures\spritenums\slant\9.png" />
     <None Remove="Resources\textures\startButton.png" />
     <None Remove="Resources\textures\start_button.png" />
     <None Remove="Resources\textures\title.png" />
@@ -143,6 +180,23 @@
     <EmbeddedResource Include="Resources\scripts\titleScreen.lua" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_LS.png" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_PR.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\background.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\border.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\cornerPanel.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\cornerPanelBorder.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\cornerPanelChevrons.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\fill.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\infoBorders.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\jacketBottomRight.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\jacketTopLeft.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\storageDevice.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\trackDataLabel.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\cursor.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\cursorOuter.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\levelBadge.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\levelBadgeBorder.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\noJacket.png" />
+    <EmbeddedResource Include="Resources\textures\chartSelect\noJacketOverlay.png" />
     <EmbeddedResource Include="Resources\textures\chartSelect\setFrame.png" />
     <EmbeddedResource Include="Resources\textures\chartSelect\setTitlePlate.png" />
     <EmbeddedResource Include="Resources\textures\combo\0.png" />
@@ -201,6 +255,26 @@
     <EmbeddedResource Include="Resources\textures\legend\start.png" />
     <EmbeddedResource Include="Resources\textures\legend\vol\l.png" />
     <EmbeddedResource Include="Resources\textures\legend\vol\r.png" />
+    <EmbeddedResource Include="Resources\textures\noise\0.png" />
+    <EmbeddedResource Include="Resources\textures\noise\1.png" />
+    <EmbeddedResource Include="Resources\textures\noise\2.png" />
+    <EmbeddedResource Include="Resources\textures\noise\3.png" />
+    <EmbeddedResource Include="Resources\textures\noise\4.png" />
+    <EmbeddedResource Include="Resources\textures\noise\5.png" />
+    <EmbeddedResource Include="Resources\textures\noise\6.png" />
+    <EmbeddedResource Include="Resources\textures\noise\7.png" />
+    <EmbeddedResource Include="Resources\textures\noise\8.png" />
+    <EmbeddedResource Include="Resources\textures\noise\9.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\0.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\1.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\2.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\3.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\4.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\5.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\6.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\7.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\8.png" />
+    <EmbeddedResource Include="Resources\textures\spritenums\slant\9.png" />
     <EmbeddedResource Include="Resources\textures\title.png" />
   </ItemGroup>
 
